[project]
name = "gps-plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bgo", email = "bgo@vedur.is" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
gps-plot = "gps_plot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
